fix: use spacing similar to what already exists

--- a/weatheroclock@CleoMenezesJr.github.io/stylesheet.css
+++ b/weatheroclock@CleoMenezesJr.github.io/stylesheet.css
@@ -1,4 +1,4 @@
 .weather_label {
-  margin-right: 0.8em;
+  margin-right: 1.2em;
   margin-left: 0.2em;
 }
